add led control

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,5 +4,6 @@ idf_component_register(SRCS "mesh_main.c"
                         "legacy_root_sender.c"
                         "relay_block_pca8574.c"
                         "humid_ctrl.c"
-                    PRIV_REQUIRES esp_wifi esp_driver_gpio esp_adc driver nvs_flash
+                        "water_led.c"
+                    PRIV_REQUIRES esp_wifi esp_driver_gpio esp_adc driver led_strip nvs_flash
                     INCLUDE_DIRS "." "include")
