--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "mesh_main.c"
+idf_component_register(SRCS "mesh_time_sync.c" "log_time_vprintf.c" "mesh_main.c"
                         "legacy_proto.c"                   
                         "stack_monitor.c"
                         "legacy_root_sender.c"
@@ -6,5 +6,7 @@ idf_component_register(SRCS "mesh_main.c"
                         "humid_ctrl.c"
                         "water_led.c"
                         "pms5003_node.c"
+                        "mesh_time_sync.c"
+                        "log_time_vprintf.c"
                     PRIV_REQUIRES esp_wifi esp_driver_gpio esp_adc driver led_strip nvs_flash
                     INCLUDE_DIRS "." "include")
